J! 3.x compatible version; pack script is added; Missing string is added

--- a/plugins/user/profilepicture/language/en-GB/en-GB.plg_user_profilepicture.ini
+++ b/plugins/user/profilepicture/language/en-GB/en-GB.plg_user_profilepicture.ini
@@ -9,3 +9,5 @@ PLG_USER_PROFILEPICTURE_FIELD_PICTURE_LABEL="Picture:"
 PLG_USER_PROFILEPICTURE_SLIDER_LABEL="Profile Picture"
 PLG_USER_PROFILEPICTURE_XML_DESCRIPTION="User Profile Picture Plug-in"
 PLG_USER_PROFILEPICTURE_FIELD_PICTURE_REMOVE="Remove your profile picture"
+PLG_USER_PROFILEPICTURE_ERROR_TOO_SMALL="Profile picture is too small, please use picture with minimum size 200x200px"
+
