--- a/plugins/user/profilepicture/language/en-GB/en-GB.plg_user_profilepicture.ini
+++ b/plugins/user/profilepicture/language/en-GB/en-GB.plg_user_profilepicture.ini
@@ -1,11 +1,16 @@
 ; Mosets Consulting
-; Copyright (C) 2012 Mosets Consulting. All rights reserved.
+; Copyright (C) 2012-present Mosets Consulting. All rights reserved.
 ; License http://www.gnu.org/licenses/gpl-2.0.html GNU/GPL, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
 PLG_USER_PROFILEPICTURE="User - Profile Picture"
 PLG_USER_PROFILEPICTURE_FIELD_PICTURE_DESC="Choose a picture for your profile"
-PLG_USER_PROFILEPICTURE_FIELD_PICTURE_LABEL="Picture:"
+PLG_USER_PROFILEPICTURE_FIELD_PICTURE_LABEL="Picture<br />(Min. 200px by 200px):"
 PLG_USER_PROFILEPICTURE_SLIDER_LABEL="Profile Picture"
 PLG_USER_PROFILEPICTURE_XML_DESCRIPTION="User Profile Picture Plug-in"
 PLG_USER_PROFILEPICTURE_FIELD_PICTURE_REMOVE="Remove your profile picture"
+PLG_USER_PROFILEPICTURE_ERROR_TOO_SMALL="The profile picture must have minimum of 200px in width and height."
+PLG_USER_PROFILEPICTURE_ERROR_FILE_SIZE_TOO_BIG="The profile picture file size should not exceed %1$sKB."
+PLG_USER_PROFILEPICTURE_FIELD_MAXUPLOADSIZEINBYTES_LABEL="Maximum Size (in bytes)"
+PLG_USER_PROFILEPICTURE_FIELD_MAXUPLOADSIZEINBYTES_DESC="The maximum file size (in bytes)."
+PLG_USER_PROFILEPICTURE_FIELD_MAXUPLOADSIZEINBYTES_MESSAGE="Maximum file size: %1$sKB"
