Add a message to inform user of minimum dimension.

--- a/plugins/user/profilepicture/language/en-GB/en-GB.plg_user_profilepicture.ini
+++ b/plugins/user/profilepicture/language/en-GB/en-GB.plg_user_profilepicture.ini
@@ -5,7 +5,7 @@
 
 PLG_USER_PROFILEPICTURE="User - Profile Picture"
 PLG_USER_PROFILEPICTURE_FIELD_PICTURE_DESC="Choose a picture for your profile"
-PLG_USER_PROFILEPICTURE_FIELD_PICTURE_LABEL="Picture<br />(Min. 200px by 200px):"
+PLG_USER_PROFILEPICTURE_FIELD_PICTURE_LABEL="Picture:"
 PLG_USER_PROFILEPICTURE_SLIDER_LABEL="Profile Picture"
 PLG_USER_PROFILEPICTURE_XML_DESCRIPTION="User Profile Picture Plug-in"
 PLG_USER_PROFILEPICTURE_FIELD_PICTURE_REMOVE="Remove your profile picture"
@@ -14,3 +14,4 @@ PLG_USER_PROFILEPICTURE_ERROR_FILE_SIZE_TOO_BIG="The profile picture file size s
 PLG_USER_PROFILEPICTURE_FIELD_MAXUPLOADSIZEINBYTES_LABEL="Maximum Size (in bytes)"
 PLG_USER_PROFILEPICTURE_FIELD_MAXUPLOADSIZEINBYTES_DESC="The maximum file size (in bytes)."
 PLG_USER_PROFILEPICTURE_FIELD_MAXUPLOADSIZEINBYTES_MESSAGE="Maximum file size: %1$sKB"
+PLG_USER_PROFILEPICTURE_FIELD_MINDIMENSION_MESSAGE="Minimum dimension: 200px by 200px"
