--- a/plugins/user/profilepicture/language/en-GB/en-GB.plg_user_profilepicture.ini
+++ b/plugins/user/profilepicture/language/en-GB/en-GB.plg_user_profilepicture.ini
@@ -7,7 +7,7 @@ PLG_USER_PROFILEPICTURE="User - Profile Picture"
 PLG_USER_PROFILEPICTURE_FIELD_PICTURE_DESC="Choose a picture for your profile"
 PLG_USER_PROFILEPICTURE_FIELD_PICTURE_LABEL="Picture:"
 PLG_USER_PROFILEPICTURE_SLIDER_LABEL="Profile Picture"
-PLG_USER_PROFILEPICTURE_XML_DESCRIPTION="User Profile Picture Plug-in"
+PLG_USER_PROFILEPICTURE_XML_DESCRIPTION="A light and simple plugin to allow your users to upload and manage their profile picture."
 PLG_USER_PROFILEPICTURE_FIELD_PICTURE_REMOVE="Remove your profile picture"
 PLG_USER_PROFILEPICTURE_ERROR_TOO_SMALL="The profile picture must have minimum of 200px in width and height."
 PLG_USER_PROFILEPICTURE_ERROR_FILE_SIZE_TOO_BIG="The profile picture file size should not exceed %1$sKB."
