--- a/plugins/user/profilepicture/language/en-GB/en-GB.plg_user_profilepicture.ini
+++ b/plugins/user/profilepicture/language/en-GB/en-GB.plg_user_profilepicture.ini
@@ -15,3 +15,4 @@ PLG_USER_PROFILEPICTURE_FIELD_MAXUPLOADSIZEINBYTES_LABEL="Maximum Size (in bytes
 PLG_USER_PROFILEPICTURE_FIELD_MAXUPLOADSIZEINBYTES_DESC="The maximum file size (in bytes)."
 PLG_USER_PROFILEPICTURE_FIELD_MAXUPLOADSIZEINBYTES_MESSAGE="Maximum file size: %1$sKB"
 PLG_USER_PROFILEPICTURE_FIELD_MINDIMENSION_MESSAGE="Minimum dimension: 200px by 200px"
+PLG_USER_PROFILEPICTURE_FIELD_ERROR_LIBRARY_NOT_LOADED="Profile Picture library is not enabled."
