--- a/language/en-GB/en-GB.lib_profilepicture.sys.ini
+++ b/language/en-GB/en-GB.lib_profilepicture.sys.ini
@@ -1,6 +1,6 @@
-; ¨Mosets Consulting
-; Copyright (C) 2012 Mosets Consulting. All rights reserved.
+; Mosets Consulting
+; Copyright (C) 2012-present Mosets Consulting. All rights reserved.
 ; MIT License
 ; Note : All ini files need to be saved as UTF-8
 
-LIB_PROFILEPICTURE_XML_DESCRIPTION="Profile Picture Library provides a common API for third party developers to access and display users' profile picture."
+LIB_PROFILEPICTURE_XML_DESCRIPTION="Profile Picture Library provides a common API for third party Joomla extension developers to access and display users' profile picture."
